Reworked page layout and content update

--- a/_includes/themes/twitter/page.html
+++ b/_includes/themes/twitter/page.html
@@ -4,8 +4,9 @@
       <div class="page-header">
         <h1>{{ page.title }} {% if page.tagline %} <small>{{ page.tagline }}</small>{% endif %}</h1>
       </div>
-    
       {{ content }}
     </div>
+    <!-- /span12 -->
   </div>
-</div><!-- /container -->
+</div>
+<!-- /container -->
