--- a/_includes/themes/twitter/page.html
+++ b/_includes/themes/twitter/page.html
@@ -2,7 +2,8 @@
   <div class="row-fluid well">
     <div class="span12">
       <div class="page-header">
-        <h1>{{ page.title }} {% if page.tagline %} <small>{{ page.tagline }}</small>{% endif %}</h1>
+        <h1>{{ page.title }}</h1>
+        {% if page.description %} <h2><small>{{ page.description }}</small></h2>{% endif %}
       </div>
       {{ content }}
     </div>
