--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -29,12 +29,13 @@
     <!-- atom & rss feed -->
     <link href="{{ BASE_PATH }}{{ site.JB.atom_path }}" type="application/atom+xml" rel="alternate" title="Sitewide ATOM Feed">
     <link href="{{ BASE_PATH }}{{ site.JB.rss_path }}" type="application/rss+xml" rel="alternate" title="Sitewide RSS Feed">
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js"></script>
 	
 		{% include JB/analytics %}
 
   </head>
 
-  <body class="{{ page.layout }}">
+  <body id="top" class="{{ page.layout }}">
     <header>
 			<div id="utility-menu" class="container">
 				<div class="pull-right">
@@ -82,6 +83,5 @@
         </div>
       </footer>
     </div> <!-- /container -->
-
   </body>
 </html>
