--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -230,7 +230,8 @@ header .navbar .nav > li.active > a {
 header .nav-pills > a:hover, 
 header .nav-pills > .active > a, 
 header .nav-pills > .active > a:hover {
-  background-color: #2ecc71;
+  background-color: #2ecc71 !important;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.4);
 }
 header .nav-pills {
   margin: 15px 0 5px;
